Updated default configuration.

--- a/bin/configuration/tts.cfg
+++ b/bin/configuration/tts.cfg
@@ -11,8 +11,8 @@
     true
 
 [Windows.TextToSpeech.SystemPreString]
-    #PowerShell -Command "Add-Type -AssemblyName System.Speech; (New-Object System.Speech.Synthesis.SpeechSynthesizer).Speak('
-    PowerShell -Command "Add-Type -AssemblyName System.Speech; $A = New-Object System.Speech.Synthesis.SpeechSynthesizer; $A.SelectVoice('Microsoft Zira Desktop'); $A.Speak('
+    #PowerShell -windowstyle hidden -Command "Add-Type -AssemblyName System.Speech; (New-Object System.Speech.Synthesis.SpeechSynthesizer).Speak('
+    PowerShell -windowstyle hidden -Command "Add-Type -AssemblyName System.Speech; $A = New-Object System.Speech.Synthesis.SpeechSynthesizer; $A.SelectVoice('Microsoft Zira Desktop'); $A.Speak('
 
 [Windows.TextToSpeech.SystemPostString]
     ');"
