Reduce precision for navigation and guidance display values.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,8 @@
         "future": "cpp",
         "valarray": "cpp",
         "config": "c",
-        "regex": "cpp"
+        "regex": "cpp",
+        "source_location": "cpp",
+        "span": "cpp"
     }
 }
