Add near and far clipping plane values to configuration.

--- a/bin/configuration/style.cfg
+++ b/bin/configuration/style.cfg
@@ -5,6 +5,14 @@
 [Camera.Mode]
     2D
 
+# Set initial near clipping plane
+[Camera.ClipNear]
+    0.1
+
+# Set initial far clipping plane
+[Camera.ClipFar]
+    1000.0
+
 
 # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 # DISPLAY
